data/derived/comb/progs/unify/prog6947.ml.out
Characters 78-86:
  if (isFPoint x) then (x, true)
      ^^^^^^^^
Error: This expression has type bool
       This is not a function; it cannot be applied.
